--- a/templates/base.html
+++ b/templates/base.html
@@ -7,17 +7,18 @@
         <title>OpenEcoMaps</title>
 
         <link href="static/css/style.css" rel="stylesheet" type="text/css">
-<!--
         <script type="text/javascript" src="static/js/function.js"></script>
+<!--
         <script type="text/javascript" src="static/js/jquery-1.4.4.min.js"></script>
 -->
         <script type="text/javascript" src="static/js/oem_mini.js"></script>
         <script type="text/javascript" src="static/js/utility.js"></script>
 <!--
-        <script type="text/javascript" src="static/js/OpenLayers.js"></script>
--->
         <script type="text/javascript" src="http://www.openlayers.org/api/OpenLayers.js"></script>
+-->
+        <script type="text/javascript" src="static/js/OpenLayers.js"></script>
         <link rel="stylesheet" type="text/css" href="static/css/oem_style.css">
+        <link rel="stylesheet" type="text/css" href="static/css/oem_style2.css">
         <link rel="stylesheet" type="text/css" href="static/css/oem_accordion_style.css">
 
         <script type="text/javascript">
@@ -58,7 +59,9 @@
     
     <body onload="init()">
         <header> 
-            <img src="static/img/greenpeace.png" id="gp-logo">
+            <a href="home">
+                <img src="static/img/greenpeace.png" id="gp-logo">
+            </a>
             <ul id="menu">
                 <li class="mainmenu"><span>Infos zu Siegeln:</span></li>
                 <li class="mainmenu"><a href="javascript:getLogoInfo('nutrition')">Ernährung</a></li>
