group pages, login, category overview, poi overview

--- a/static_files/css/header.css
+++ b/static_files/css/header.css
@@ -13,7 +13,7 @@ header {
 	margin: 35px 0 0 23px;
 }
 
-#menu {
+.level1 {
 	width:100%;
 	float:left;
 	margin:0;
@@ -33,7 +33,7 @@ header {
     filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#75d119', endColorstr='#5cb801',GradientType=0 ); /* IE6-8 */
 }
 
-#menu li {
+.level1 li {
 	float:left;
 	color:#fff;
 	font-size:15px;
@@ -42,31 +42,49 @@ header {
 	border-right:1px solid rgba(255,255,255,0.25);
 }
 
-#menu li:first-child {
+.level1 li:first-child {
 	border-left:none;
 }
 
-#menu li.submenu {
+.level1 li.right {
 	float:right;
 	font-size:10px;
 	margin-top:3px;
 }
 
-#menu li a, #menu li span {
+.level1 li a, .level1 li span {
 	padding:3px 15px 4px;
 	display:block;
 	color:#fff;
 	text-decoration:none;
 }
 
-#menu li a {
+.level1 li a {
 	font-weight:bold;
 }
 
-#menu li a:hover {
+.level1 li a:hover {
 	background-color:rgba(0,0,0,0.1);
 }
 
+
+.level1 ul ul {
+    position: absolute;
+    width: 7em;
+    display: none;
+}
+.level1 ul ul li {
+    border-bottom: 1px solid #CCC;
+    border-right-color: #CCC;
+}
+ul.level1 li.submenu:hover ul.level2 {
+    display:block;
+}
+ul.level2 {
+    top: 1.5em;
+    left: -1px;
+    margin-top: 2px;
+}
 
 
 header .ui-widget {
