--- a/templates/group_pages/pages.html
+++ b/templates/group_pages/pages.html
@@ -1,12 +1,12 @@
 {% extends "base.html" %}
 
-{% load show_tabmenu_for_categories %}
-
 
 {% block main_content %}
     <div id="tabs">
         <h1>&nbsp;</h1>
-        {% show_tabmenu_for_categories selected_category.id %}
+        {% block tabs %}
+            hier kommen die Tabs
+        {% endblock %}
         <a href="/" class="button">&larr;zurück zur Karte</a>
     </div>
     <div id="content">
