tab menu problem

--- a/templates/auth/add_or_edit_page.html
+++ b/templates/auth/add_or_edit_page.html
@@ -9,7 +9,12 @@
             {% if page %}
             <tr>
                 <th>Seite löschen:</th>
-                <td><input type="checkbox"><input type="checkbox"></td>
+                <td>
+                    <input type="checkbox">
+                    <input type="checkbox">
+                    <input type="checkbox">
+                    (zum löschen drei Häkchen setzen)
+                </td>
             </tr>
             {% endif %}
             <tr>
