--- a/templates/auth/auth.html
+++ b/templates/auth/auth.html
@@ -40,7 +40,9 @@
                 <table>
                     {{ form.as_table }}
                     <tr>
-                        <td></td>
+                        <td>
+                            <input type="hidden" name="next" value="{{ next }}">
+                        </td>
                         <td>
                             <input type="submit" value="login">
                         </td>
