--- a/templates/auth/overview_pois.html
+++ b/templates/auth/overview_pois.html
@@ -18,7 +18,7 @@
             <td>{{ poi.name }}</td>
             <td>{{ poi.zip_code }} / {{ poi.city }}</td>
             <td>{{ poi.street }}</td>
-            <td>{{ poi.annotation }}</td>
+            <td>{{ poi.text }}</td>
             <td>
                 <ul>
                 {% for f in poi.filters.all %}
