--- a/templates/templatetags/tabmenu_for_categories.html
+++ b/templates/templatetags/tabmenu_for_categories.html
@@ -1,9 +1,7 @@
-<ul>
-    {% for category in categories %}
+{% for category in categories %}
     <li>
-        <a href="/category/{{ category.id }}"{% ifequal selected category.id %} class="active"{% endifequal %}>
+        <a href="/pages/category/{{ category.id }}"{% ifequal selected category.id %} class="active"{% endifequal %}>
             {{ category.name }}
         </a>
     </li>
-    {% endfor %}
-</ul>
+{% endfor %}
