--- a/templates/auth/auth.html
+++ b/templates/auth/auth.html
@@ -41,7 +41,7 @@
                     {{ form.as_table }}
                     <tr>
                         <td>
-                            <input type="hidden" name="next" value="{{ next }}">
+                            <input type="hidden" name="next" value="{% if next %}{{ next|escape }}{% else %}/overview{% endif %}">
                         </td>
                         <td>
                             <input type="submit" value="login">
