--- a/templates/pages/flyer_overview.html
+++ b/templates/pages/flyer_overview.html
@@ -1,4 +1,4 @@
-{% extends "group_pages/pages.html" %}
+{% extends "pages/pages.html" %}
 
 {% load show_tabmenu_for_categories %}
 
@@ -6,21 +6,21 @@
 {% block mainmenu %}
     <li>
         <span>
-            Kategorie >> {{ selected_category }}
+            Kategorie >> {{ selected }}
         </span>
     </li>
 {% endblock %}
 
 
 {% block tabs %}
-    {% show_tabmenu_for_categories selected_category.id %}
+    {% show_tabmenu_for_categories selected.id %}
 {% endblock %}
 
 
 {% block content %}
     {% for page in pages %}
         <div class="pic">
-            <a href="/category/{{ selected_category.id }}/flyer/{{ page.group.id }}">
+            <a href="/pages/category/{{ selected.id }}/{{ page.id }}">
                 <img src="/static/user_content/img/{{ page.category|lower }}/{{ page.group|lower }}.png">
             </a>
             <ul>
@@ -34,7 +34,7 @@
     {% endfor %}
     {% if user.is_authenticated and not group_has_page %}
         <div class="pic">
-            <a href="/category/{{ selected_category.id }}/add">
+            <a href="/pages/category/{{ selected_category.id }}/add">
                 <img src="/static/img/plus_sign.png" alt="neu">
             </a>
         </div>
