BUGFIX: seal page tab menu with wrong urls

--- a/templates/templatetags/tabmenu_for_seal_page.html
+++ b/templates/templatetags/tabmenu_for_seal_page.html
@@ -1,6 +1,6 @@
 {% for page in pages %}
     <li>
-        <a href="/pages/filter/{{ selected }}/{{ page.id }}"{% ifequal selected page.id %} class="active"{% endifequal %}>
+        <a href="/pages/filter/{{ filter.id }}/{{ page.id }}"{% ifequal selected page.id %} class="active"{% endifequal %}>
             {{ page }}
         </a>
     </li>
